added basic axios

--- a/databases_project_python.ipynb
+++ b/databases_project_python.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PostgreSQL connection is opened.\n",
-      "[(1, 'Peter Dinklage', datetime.date(1975, 7, 11), None), (2, 'Sophie Turner', datetime.date(1981, 2, 22), None), (3, 'Emilia Clarke', datetime.date(1991, 7, 2), None)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import psycopg2\n",
     "\n",
@@ -39,10 +30,34 @@
     "    \n",
     "    cursor.close()\n",
     "    connection.close()\n",
-    "    print(\"PostgreSQL connection is closed.\")\n",
-    "\n",
+    "    print(\"PostgreSQL connection is closed.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PostgreSQL connection is opened.\n",
+      "1971-03-09\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
     "cursor, connection = open_connection()\n",
-    "\n"
+    "\n",
+    "cursor.execute(\"SELECT birthdate FROM user_table WHERE email = 'marie@sanders.com'\")\n",
+    "a = cursor.fetchall()\n",
+    "if a != []:\n",
+    "    print(a[0][0])\n",
+    "else:\n",
+    "    print(\"leer\")\n",
+    "password = \"1971-03-09\""
    ]
   },
   {
